--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,56 +1,37 @@
-name: E2E Tests
+name: Build and Test
 
 on:
   push:
     branches:
-      - master
-      - release
+      - main
   pull_request:
     branches:
-      - master
-      - release
-  schedule:
-    - cron: "0 0 * * *" #end of every day
+      - main
+
 jobs:
-  E2E-testing:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false #ensure both tests run even if one fails
-      matrix:
-        browser: [firefox]
-        tests: [stable, unstable]
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
-          node-version: 18
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
+          java-version: '11'
+          distribution: 'adopt-openjdk'
+
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v3
         with:
-          distribution: temurin
-          java-version: 11
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('.gradle/*.gradle*', 'build.gradle') }}
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      - name: Update Property File
-        run: mv src/e2e/resources/test.ci-${{ matrix.browser }}.properties src/e2e/resources/test.properties
-      - name: Run Solr search service + local Datastore emulator
-        run: docker compose up -d
-      - name: Create Config Files
-        run: ./gradlew createConfigs testClasses generateTypes
-      - name: Install Frontend Dependencies
-        run: npm ci
-      - name: Build Frontend Bundle
-        run: npm run build
-      - name: Start Server
-        run: |
-          ./gradlew serverRun &
-          ./wait-for-server.sh
-      - name: Start Tests
-        run: xvfb-run --server-args="-screen 0 1024x768x24" ./gradlew -P${{ matrix.tests }} e2eTests
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Run tests
+        run: ./gradlew test
